# discordkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md
examples/: advanced_commands.py  component_bot.py  economy_bot.py  error_handling.py  interactions_demo.py  moderation_bot.py  simple_bot.py  slash_commands.py  subcommands.py  suggestions_bot.py  ticket_system.py
src/discordkit/: __init__.py
src/discordkit/cli/: __init__.py  main.py
src/discordkit/commands/: __init__.py  command.py  decorators.py  option.py  registry.py  resolver.py
src/discordkit/components/: __init__.py  context.py  router.py
src/discordkit/core/: __init__.py  cache.py  cache_persistent.py  client.py  config.py  context.py  gateway.py  http.py  rate_limit.py
src/discordkit/interactions/: __init__.py  button.py  modal.py  select.py
src/discordkit/models/: __init__.py  base.py  guild.py  message.py  role.py  user.py
src/discordkit/types/: __init__.py
tests/: conftest.py  test_cache.py  test_cache_persistent.py  test_commands.py  test_components.py  test_error_handling.py  test_gateway.py  test_rate_limit.py  test_resolver.py  test_routing.py
