[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "discordkit"
version = "0.1.0"
description = "DiscordKit - A modern, strongly-typed Python framework for Discord with excellent DX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "DiscordKit Contributors"}
]
keywords = ["discord", "bot", "framework", "api", "asyncio", "pydantic"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "typer[all]>=0.12.3",
    "anyio>=4.4.0",
    "watchfiles>=0.22.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    # Optional: "h2" for HTTP/2 support in httpx (install as httpx[http2])
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "types-python-dateutil",
]

[project.scripts]
discordkit = "discordkit.cli:main"

[project.urls]
Homepage = "https://github.com/discordkit/discordkit"
Repository = "https://github.com/discordkit/discordkit"
Documentation = "https://docs.discordkit.dev"
Issues = "https://github.com/discordkit/discordkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/discordkit"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: marks tests as integration tests (may require Discord token)",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
